force-app/main/default/objects/Product2/fields/CurrentInventory__c.field-meta.xml
<CustomField>
    <fullName>CurrentInventory__c</fullName>
    <label>Current inventory</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>