force-app/main/default/objects/Product2/fields/ImageAltText__c.field-meta.xml
<CustomField>
    <fullName>ImageAltText__c</fullName>
    <label>Image Alt Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>