force-app/main/default/objects/Product2/fields/LwcImageLarge__c.field-meta.xml
<CustomField>
    <fullName>LwcImageLarge__c</fullName>
    <label>Lwc Image Large</label>
    <length>255</length>
    <type>Text</type>
</CustomField>