force-app/main/default/objects/Product2/fields/LwcImageMedium__c.field-meta.xml
<CustomField>
    <fullName>LwcImageMedium__c</fullName>
    <label>Lwc Image Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>