force-app/main/default/objects/Product2/fields/LwcImageSmall__c.field-meta.xml
<CustomField>
    <fullName>LwcImageSmall__c</fullName>
    <label>Lwc Image Small</label>
    <length>255</length>
    <type>Text</type>
</CustomField>