force-app/main/default/objects/Product2/fields/StartingInventory__c.field-meta.xml
<CustomField>
    <fullName>StartingInventory__c</fullName>
    <label>Starting inventory</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>