force-app/main/default/objects/Product2/listViews/Cat_Products.listView-meta.xml
<ListView>
    <fullName>Cat_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Cats</value>
    </filters>
    <label>Cat Products</label>
</ListView>